--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,7 @@
-@import './core/variables';
-@import '../node_modules/sass-mq/mq';
-@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
-@import './core/reset';
-@import './core/container';
-@import './widgets/header';
+@import url("https://fonts.googleapis.com/css2?family=Alata&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap");
+@import "./core/reset";
+@import "../node_modules/sass-mq/mq";
+@import "./core/variables";
+@import "./core/container";
+@import "./widgets/header";
