--- a/styles/core/_container.scss
+++ b/styles/core/_container.scss
@@ -5,19 +5,74 @@ body {
   overflow-x: hidden;
 }
 
+body {
+  height: 100%;
+}
+
 .content {
   width: 100%;
   max-width: 1200px;
-  margin: 0 auto;
-  height: 100%;
+  margin: 1em auto;
 }
 
 .full-width {
   width: 100vw;
 }
 
+h3 {
+  font-size: 2em;
+  font-family: $font-secondary;
+  text-transform: uppercase;
+  padding: 0.5em 0;
+}
+
+a {
+  position: relative;
+  text-decoration: none;
+  color: white;
+  font-family: $font-secondary;
+  font-size: 1.75em;
+  text-transform: uppercase;
+  padding: 0.35em 0;
+  &:hover::after {
+    content: "";
+    border-bottom: 0.15em solid $white;
+    position: absolute;
+    top: 1.5em;
+    width: 2em;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+button {
+  text-shadow: none;
+  min-width: 157px;
+  height: 40px;
+  border-width: 0.1em;
+  border-radius: 0;
+  background-color: white;
+  font-size: 1.15em;
+  line-height: 40px;
+  font-family: $font-secondary;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin: 1em 0;
+  &:hover {
+    background-color: black;
+    color: white;
+  }
+}
+
 @include mq($from: tablet) {
   .content {
+    position: relative;
+  }
+  a {
+    font-size: 20px;
+    margin: 0 0.5em;
+    text-transform: none;
+    padding: 0.1em;
     position: relative;
   }
 }
