--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,4 +5,6 @@
 @import "./core/variables";
 @import "./core/container";
 @import "./widgets/header";
+@import "./widgets/footer";
 @import "./widgets/image-module";
+@import "./widgets/our-creations";
