--- a/styles/widgets/_header.scss
+++ b/styles/widgets/_header.scss
@@ -1,8 +1,8 @@
 .header {
   background-image: url("/images/mobile/image-hero.jpg");
   width: 100%;
-  height: 100%;
-  max-height: 45em;
+  height: 40em;
+
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
@@ -125,8 +125,8 @@ input.input-box[type="checkbox"]:checked ~ .nav__menu_collapse {
   .header {
     background-image: url("/images/desktop/image-hero.jpg");
     width: 100%;
-    height: 100%;
-    max-height: 35em;
+    height: 30em;
+
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
